<resources>
    <string name="app_name">iFinancier</string>
    <string name="account_text">Hesap</string>
    <string name="finance_text">Piyasalar</string>
    <string name="moneybox_text">Kumbara</string>
    <string name="advice_text">Öneriler</string>
    <string name="calculator_text">Hesaplaycı</string>
    <string name="coin">COIN</string>
    <string name="price">00000,00$</string>
    <string name="ai_button">AI Button</string>
    <string name="add_button">+</string>
    <string name="decrease_button">-</string>
    <string name="number">0</string>
    <string name="parabirimleri">Para Birimleri</string>
    <string name="calctext">0.00</string>




</resources>