<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corner"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="3dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/coinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/coinPrice"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/coin">
    </TextView>

    <TextView
        android:id="@+id/coinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="12dp"
        android:textSize="12sp"
        android:textStyle="italic"
        android:text="@string/price">
    </TextView>

    <Button
        android:id="@+id/aiButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:text="@string/ai_button"
        android:textSize="12sp">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>