<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6EE"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#1F1F1C"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/manage_account_layout"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/manageAccount"
                android:background="@drawable/account_icon"
                android:backgroundTint="#CCCCCC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/account_text">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#CCCCCC"
                android:text="@string/account_text">
            </TextView>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/finance_layout"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/financeScreen"
                android:background="@drawable/finance_icon"
                android:backgroundTint="#CCCCCC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/finance_text">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#CCCCCC"
                android:text="@string/finance_text">
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/moneybox_layout"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/moneybox_screen"
                android:background="@drawable/moneybox_icon"
                android:backgroundTint="#CCCCCC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/moneybox_text">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#CCCCCC"
                android:text="@string/moneybox_text">
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/aiAdvice_layout"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/aiAdviceScreen"
                android:background="@drawable/ai_advice_icon"
                android:backgroundTint="#CCCCCC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/advice_text">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#CCCCCC"
                android:text="@string/advice_text">
            </TextView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:id="@+id/calculator_layout"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/financeCalculator"
                android:background="@drawable/calculator_icon"
                android:backgroundTint="#CCCCCC"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/finance_text">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#CCCCCC"
                android:text="@string/calculator_text">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>